# projects

attempt to use OpenCV isolated/: CMakeLists.txt  conanfile.txt
attempt to use OpenCV isolated/src/: BlurLib.cpp  BlurLib.h  Platform.h
c++ part for emotion recognition/: CMakeLists.txt  README.md  readme.txt
c++ part for emotion recognition/src/: ActReactTranslator.cpp  ActReactTranslator.h  EmotionAnalyzer.cpp  EmotionAnalyzer.h  EmotionDetection.cpp  EmotionDetection.h  Platform.h  UserStateObserver.h
dumb 'ants life'/: CMakeLists.txt  README.md  main.cpp
dumb 'ants life'/src/: Ant.cpp  Ant.h  Bugslife.csv  Engine.cpp  Engine.h  Level.cpp  Level.h  main.cpp  readme.txt
dungeon master/: ConsoleView.cpp  ConsoleView.h  Enemy.cpp  Enemy.h  Field.cpp  Field.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Main.cpp  Parameter.cpp  Parameter.h  Player.cpp  Player.h  README.md  field.txt  readme.txt
elevator/: Building.cpp  Building.h  Elevator.cpp  Elevator.h  Engine.cpp  Engine.h  Level.txt  Main.cpp  Passenger.cpp  Passenger.h  README.md  Scenario.csv  State.h  Utils.h  readme.txt
self-playing sea battle/: CoordinatePair.cpp  CoordinatePair.h  Main.cpp  NavalForcesCommand.cpp  NavalForcesCommand.h  README.md  Ship.cpp  Ship.h  field.txt  readme.txt
simple excercise w input and exceptions/: Date.cpp  Date.h  README.md  Tester.cpp  database.txt
